SUBDIRS = src

pkgconfig_DATA = gles11.pc gles20.pc
pkgconfigdir = $(libdir)/pkgconfig

MAINTAINERCLEANFILES = \
					   aclocal.m4 \
					   compile \
					   config.sub \
					   config.guess \
					   config.h.in \
					   configure \
					   depcomp \
					   install-sh \
					   ltmain.sh \
					   Makefile.in \
					   missing

