#
# created by Gwanglim Lee <gl77.lee@samsung.com>
#

AC_INIT([opengl-es-virtual-drv], [0.1], [gl77.lee@samsung.com])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_C_CONST
PKG_PROG_PKG_CONFIG

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
		 Makefile
		 src/Makefile
		 src/egl/Makefile
		 src/gles1/Makefile
		 src/gles2/Makefile
		 gles11.pc
		 gles20.pc
		 egl.pc
		 ])

AC_OUTPUT

