#
# created by Gwanglim Lee <gl77.lee@samsung.com>
#

lib_LTLIBRARIES = libGLESv1_CM.la
libGLESv1_CM_la_CPPFLAGS = -I$(srcdir)/../include
libGLESv1_CM_la_CFLAGS =
libGLESv1_CM_la_LIBADD =
libGLESv1_CM_la_LDFLAGS = -avoid-version
libGLESv1_CM_la_SOURCES = gles1.c

libGLESv1_CM_la_HEADERS = \
					../include/GLES/gl.h \
					../include/GLES/glplatform.h \
					../include/GLES/glext.h

libGLESv1_CM_ladir = $(includedir)/GLES

MAINTAINERCLEANFILES = Makefile.in
